--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ tencent.ai.chat.appkey = myappkey
 # 百度 unit 机器人
 baidu.ai.chat.host.token = https://aip.baidubce.com/oauth/2.0/token
 baidu.ai.chat.host.answer = https://aip.baidubce.com/rpc/2.0/unit/service/chat
+baidu.ai.chat.serviceid = S32037
 baidu.ai.chat.apikey = myapikey
 baidu.ai.chat.secretkey = mysecretkey
 baidu.ai.chat.appid = myappid
