--- a/pom.xml
+++ b/pom.xml
@@ -23,16 +23,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>2.10.3</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.10.3</version>
-		</dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -71,6 +61,32 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>1.3.0</version>
+        <configuration>
+          <from>
+            <image>registry.cn-shanghai.aliyuncs.com/watertao_docker_registry/openjdk:8-jdk-alpine</image>
+          </from>
+          <to>
+            <!-- 注意先执行 docker login  -u 阿里云docker用户名 registry.cn-shanghai.aliyuncs.com -->
+            <image>registry.cn-shanghai.aliyuncs.com/watertao_docker_registry/${project.artifactId}:${project.version}</image>
+          </to>
+          <container>
+            <extraClasspath><classpath>/data/config</classpath></extraClasspath>
+            <jvmFlags>
+              <jvmFlag>-Xms256m</jvmFlag>
+              <jvmFlag>-Xmx1g</jvmFlag>
+            </jvmFlags>
+            <ports>
+              <port>8080</port>
+            </ports>
+            <!--使用该参数将镜像的创建时间与系统时间对其-->
+            <useCurrentTimestamp>true</useCurrentTimestamp>
+          </container>
+        </configuration>
+      </plugin>
 		</plugins>
 	</build>
 
