--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 spring.profiles.active = dev
 
-# 本模块的 topic，x.yao 的主程序会通过这个 topic 向本模块发送指令
+# \u672C\u6A21\u5757\u7684 topic\uFF0Cx.yao \u7684\u4E3B\u7A0B\u5E8F\u4F1A\u901A\u8FC7\u8FD9\u4E2A topic \u5411\u672C\u6A21\u5757\u53D1\u9001\u6307\u4EE4
 xyao.brain = ai918
 
-# x.yao 的渠道 topic，本模块可以通过这个 topic 以 x.yao 的身份向指定用户或群组发送消息
+# x.yao \u7684\u6E20\u9053 topic\uFF0C\u672C\u6A21\u5757\u53EF\u4EE5\u901A\u8FC7\u8FD9\u4E2A topic \u4EE5 x.yao \u7684\u8EAB\u4EFD\u5411\u6307\u5B9A\u7528\u6237\u6216\u7FA4\u7EC4\u53D1\u9001\u6D88\u606F
 xyao.channel = x.yao
 
-# 腾讯 AI 开放平台基础闲聊
+# \u817E\u8BAF AI \u5F00\u653E\u5E73\u53F0\u57FA\u7840\u95F2\u804A
 tencent.ai.chat.host = https://api.ai.qq.com/fcgi-bin/nlp/nlp_textchat
 tencent.ai.chat.appid = myappid
 tencent.ai.chat.appkey = myappkey
 
 
-# 百度 unit 机器人
+# \u767E\u5EA6 unit \u673A\u5668\u4EBA
 baidu.ai.chat.host.token = https://aip.baidubce.com/oauth/2.0/token
 baidu.ai.chat.host.answer = https://aip.baidubce.com/rpc/2.0/unit/service/chat
 baidu.ai.chat.serviceid = S32037
@@ -21,17 +21,17 @@ baidu.ai.chat.secretkey = mysecretkey
 baidu.ai.chat.appid = myappid
 
 
-spring.redis.host = localhost
+spring.redis.host = 1.116.245.210
 spring.redis.port = 6379
-spring.redis.password = 123456
+spring.redis.password = Super@12345678
 
 logging.root.level = INFO
-# 系统日志输出 pattern，缺省为 %d{yyyy/MM/dd-HH:mm:ss SSS} %-5level - %msg %n
+# \u7CFB\u7EDF\u65E5\u5FD7\u8F93\u51FA pattern\uFF0C\u7F3A\u7701\u4E3A %d{yyyy/MM/dd-HH:mm:ss SSS} %-5level - %msg %n
 logging.encodePattern = %d{yyyy/MM/dd-HH:mm:ss SSS} %-5level - %msg %n
 # logging.path = /myapp/log
-# 日志文件的文件名，缺省为 spring.log
+# \u65E5\u5FD7\u6587\u4EF6\u7684\u6587\u4EF6\u540D\uFF0C\u7F3A\u7701\u4E3A spring.log
 # logging.file = myapp.log
-# 日志文件按时间切割的模式，缺省为 yyyy-MM-dd
+# \u65E5\u5FD7\u6587\u4EF6\u6309\u65F6\u95F4\u5207\u5272\u7684\u6A21\u5F0F\uFF0C\u7F3A\u7701\u4E3A yyyy-MM-dd
 # logging.splitPattern = yyyy-MM-dd
-# 日志文件保留的个数，缺省为 30
+# \u65E5\u5FD7\u6587\u4EF6\u4FDD\u7559\u7684\u4E2A\u6570\uFF0C\u7F3A\u7701\u4E3A 30
 # logging.maxHistory = 30
